--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "start": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
-    "mongoose": "^6.2.9"
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "log4js": "^6.5.2",
+    "mongoose": "^6.2.9",
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.5",
+    "normalizr": "^3.6.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.1",
+    "twilio": "^3.77.2"
   }
 }
